--- a/src/Synonyms.css
+++ b/src/Synonyms.css
@@ -2,6 +2,10 @@ ul {
   padding: 0;
 }
 li {
-  display: inline;
+  display: inline-block;
   font-size: 0.8em;
+}
+
+li:not(:last-of-type)::after {
+  content: ",";
 }
