--- a/src/Synonyms.css
+++ b/src/Synonyms.css
@@ -3,7 +3,8 @@ ul {
 }
 li {
   display: inline-block;
-  font-size: 0.8em;
+  font-size: 0.9em;
+  opacity: 0.8;
 }
 
 li:not(:last-of-type)::after {
